--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,13 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    
+
+    <% if current_user %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <p><%= link_to "Login", new_user_session_path %> or <%= link_to "Register", new_user_registration_path %></p>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
