--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,6 +15,8 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <%= render "shared/nav", location: 'top' %>
+
     <% if current_user.is_a?(User) %>
       <ul>
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
@@ -27,8 +29,6 @@
     <% end %>
 
     <%= yield %>
-
-    <%= render "shared/nav" %>
 
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %></p>
