--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <meta name="keyworeds" content="<%= @seo_keywords %>">
+    <meta name="keywords" content="<%= @seo_keywords %>">
 
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -17,16 +17,7 @@
 
     <%= render "shared/nav", location: 'top' %>
 
-    <% if current_user.is_a?(User) %>
-      <ul>
-        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-      </ul>
-    <% else %>
-      <ul>
-        <li><%= link_to "Login", new_user_session_path %></li>
-        <li><%= link_to "Register", new_user_registration_path %></li>
-      </ul>
-    <% end %>
+    <%= login_helper %>
 
     <%= yield %>
 
