Updated styles and added map for contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Florian</h1>
+<hr>
+<p>Born and raised in Austria.</p>
+<p>After traveling parts of teh world I decided to come back to my beloved country and found a place again on the deepest Lake of Austria. Where I stay to this day on and enjoy the Alps while writing code ;)</p>
+<hr>
+<%= link_to "Contact Page", contact_path, class: "btn btn-lg btn-secondary" %>
