--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,32 @@
-<h1>Pages#contact</h1>
+<h1>Would you like to work together?</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Office Address</h3>
+    <p>Hauptstraße 1, A-4864 Attersee am Attersee</p>
+
+    <h3>Phone</h3>
+
+    <p><%= number_to_phone "022661326628" %></p>
+
+    <h3>Email</h3>
+
+    <p><a href="mailto:test@gmail.com?subject=PortfolioContact" "email me">Email me</a></p>
+  </div>
+
+  <div class="col-md-6">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.1107098192183!2d13.53657445164608!3d47.914895274520326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4776a9d5008b56a9%3A0xd5fd991064ce01b9!2sHauptstra%C3%9Fe%201%2C%204864%20Attersee%20am%20Attersee!5e0!3m2!1sde!2sat!4v1584884241425!5m2!1sde!2sat"
+      width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+      tabindex="0"></iframe>
+  </div>
+</div>
+
+
+<br><br><br><br><br>
+<h3>Exaples:</h3>
 <p>Find me in app/views/pages/contact.html.erb</p>
 <p><%= number_to_phone "022661326628" %></p>
 <p><%= number_to_percentage "23480.4" %></p>
