--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,3 +161,21 @@ body {
     width: 55rem;
   }
 }
+
+/*
+ * Custom Styles
+ */
+
+/* Adjustion to align like Jordan */
+.card-block{
+  padding: 1rem;
+}
+
+.card-block{
+  color: black;
+  text-align: left;
+}
+
+.auth-links a {
+  color: black;
+}
