--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,7 +41,7 @@
             </div>
             
             <div class="form-group">
-              <%= f.submit "Update", class: "btn btn-primary" %>
+              <%= f.submit "Update", class: "btn btn-primary btn-block" %>
             </div>
           <% end %>
         </div>
@@ -50,7 +50,7 @@
           <h3>Cancel my account</h3>
           
           <p>Unhappy?
-            <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %>
+            <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-block" %>
           </p>
         </div>
       </div>
