--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -8,12 +8,12 @@
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href="#"><%= fa_icon "github-square" %></li></a>
-      <li><a href="#"><%= fa_icon "facebook-square" %></li></a>
-      <li><a href="#"><%= fa_icon "twitter-square" %></li></a>
+      <li><a href="#"><%= fa_icon "github" %></li></a>
+      <li><a href="#"><%= fa_icon "facebook" %></li></a>
+      <li><a href="#"><%= fa_icon "twitter" %></li></a>
       <li><a href="#"><%= fa_icon "instagram" %></li></a>
-      <li><a href="#"><%= fa_icon "pinterest-square" %></li></a>
-      <li><a href="#"><%= fa_icon "reddit-square" %></li></a>
+      <li><a href="#"><%= fa_icon "pinterest" %></li></a>
+      <li><a href="#"><%= fa_icon "reddit" %></li></a>
     </ol>
   </div>
 </div>
