Implemented showpage styles for portfolio

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -4,6 +4,7 @@
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+@import "font-awesome";
 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
@@ -62,4 +63,13 @@ footer {
 
 footer p {
   margin-bottom: .25rem;
+}
+
+/*
+Custom code by BAFL
+*/
+
+.web-symbol {
+  vertical-align: middle;
+  font-size: 5rem;
 }
