Integrated video background along with styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,16 @@
         <div class="site-wrapper-inner">
             <div class="cover-container">
 
-                <div id="background"></div>
+                <%= video_tag(
+                    "black3.mp4",
+                    id: 'background',
+                    autoplay: true,
+                    loop: true,
+                    muted: true,
+                    poster: 'bg2.jpg'
+
+                    ) 
+                %>
 
                 <%= render "shared/application_nav" %>
 
