Implemented initial file uploading system via carrier wave for portfolio items

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -70,6 +70,6 @@ footer p {
 Custom code by BAFL
 */
 
-// .portfolio-form {
-//   padding: 20px;     // Jordan needs that class
-// }
+.portfolio-container {
+  padding-top: 30px;     // Jordan needs that class
+}
