--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -23,16 +23,13 @@
     <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
     <%# end of masthead %>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-
-
     <%= yield %>
 
     <%# satrt of footer %>
     <%= render 'shared/portfolio_footer' %>
     <%# end of footer %>
+
+    <%= alerts %>
 
     <%= source_helper("application") %>
   </body>
