--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,7 +158,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 55rem;
+    width: 65rem;
   }
 }
 
@@ -212,4 +212,18 @@ body {
 
 .app-footer {
   color: #f5f5f5;
+}
+
+.tech-news {
+  color: black;
+  margin: 20px;
+}
+
+.tech-news a {
+  color: #8ED3D3;
+  text-shadow: none;
+}
+
+.tech-news > .card {
+  padding: 30px;
 }
