--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,5 +8,23 @@
     <%= @blog.body %>
   </p>
 
+  <%# start of comment form %>
+  <% unless current_user.is_a? GuestUser %>
+    <%= form_for @comment, url: '#' do |form| %>
+      <div class="form-group">
+        <%= form.label :content %>
+        <%= form.text_area :content, class: 'form-control' %>
+      </div>
+
+      <%= form.submit 'Post Comment', class: 'btn btn-primary'  %>
+    <% end %>
+  <% end %>
+  <%# end of comment form %>
+
+
+  <%# start of comments %>
+  <%= render @blog.comments %>
+  <%# end of comments %>
+
 </div>
 
