--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,16 +9,7 @@
   </p>
 
   <%# start of comment form %>
-  <% unless current_user.is_a? GuestUser %>
-    <%= form_for @comment, url: '#' do |form| %>
-      <div class="form-group">
-        <%= form.label :content %>
-        <%= form.text_area :content, class: 'form-control' %>
-      </div>
-
-      <%= form.submit 'Post Comment', class: 'btn btn-primary'  %>
-    <% end %>
-  <% end %>
+  <%= render'comments/comment_form' %>
   <%# end of comment form %>
 
 
