--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,12 +9,14 @@
   </p>
 
   <%# start of comment form %>
-  <%= render'comments/comment_form' %>
+  <%= render 'comments/comment_form' %>
   <%# end of comment form %>
 
 
   <%# start of comments %>
-  <%= render @blog.comments %>
+  <div id="comments" data-blog-id="<%= @blog.id %>%">
+    <%= render @blog.comments %>
+  </div>
   <%# end of comments %>
 
 </div>
