--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -14,7 +14,7 @@
 
 
   <%# start of comments %>
-  <div id="comments" data-blog-id="<%= @blog.id %>%">
+  <div id="comments" data-blog-id="<%= @blog.id %>">
     <%= render @blog.comments %>
   </div>
   <%# end of comments %>
