--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -160,6 +160,7 @@ h6, .h6 {
  */
 
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -176,4 +177,20 @@ h6, .h6 {
 
  .social-links li {
   font-size: 2.5rem;
+ }
+
+ .comment-card > .card {
+   margin-top: 15px;
+   padding: 15px 20px 15px 20px;
+ }
+
+ .comment-attribution {
+   margin-top: 15px;
+   font-size: .8em;
+   font-style: italic;
+   font-weight: 100;
+ }
+
+ .comment-name {
+   font-weight: 800;
  }
